--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="Business, Portfolio, Services, Contact">
   <meta name="author" content="Your Company Name">
   <title>Business Portfolio</title>
+  <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/022/418/064/small/project-task-management-and-effective-time-planning-tools-project-development-icon-3d-vector-illustration-png.png" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -166,7 +167,10 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">BizName</a>
+    <a class="navbar-brand" href="#">
+      <img src="https://static.vecteezy.com/system/resources/thumbnails/022/418/064/small/project-task-management-and-effective-time-planning-tools-project-development-icon-3d-vector-illustration-png.png" alt="Logo" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;">
+      BizName
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
