--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://about.google/" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
+          <a href="https://jahidads.github.io/my-portfolio/" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
             <div class="portfolio-img-wrapper">
-              <img src="https://img.freepik.com/free-psd/google-icon-isolated-3d-render-illustration_47987-9777.jpg?semt=ais_hybrid&w=740" alt="Project 7" class="img-fluid mb-3 shadow" style="width: 100px; height: 100px; object-fit: cover;">
+              <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-1/495563656_122107947614855440_1152109947886773901_n.jpg?stp=c0.0.1542.1542a_dst-jpg_s200x200_tt6&_nc_cat=106&ccb=1-7&_nc_sid=1d2534&_nc_ohc=fShzMFoc9Z4Q7kNvwEDfVCl&_nc_oc=AdluVD8yY5pPqSZDGYOwei5buXl1-Y4q0895JLG83cmZUZoXmIPovfuxGAO4OE7f_KI&_nc_zt=24&_nc_ht=scontent.fdac174-1.fna&_nc_gid=3PJlZ6FE1d-vIfSk16MQwg&oh=00_AfIyOWRgtvvH0jbCgss3j2id7KXZTPkIiB336vMQ-Cq2YQ&oe=68373FD9" alt="Project 7" class="img-fluid mb-3 shadow" style="width: 100px; height: 100px; object-fit: cover;">
             </div>
-            <p style="color: #333; font-size: 1rem; font-weight: bold;">Project 07 - Google</p>
+            <p style="color: #333; font-size: 1rem; font-weight: bold;">Project 07 - My Portfolio</p>
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
@@ -347,11 +347,11 @@
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://support.google.com/youtube/?hl=en#topic=9257498" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
+          <a href="#" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
             <div class="portfolio-img-wrapper">
-              <img src="https://miro.medium.com/v2/resize:fit:1400/1*whq2w6YJL-JbWna_u5uJaQ.jpeg" alt="Project 10" class="img-fluid mb-3 shadow" style="width: 100px; height: 100px; object-fit: cover;">
+              <img src="https//www.examexample.com" alt="Project 10" class="img-fluid mb-3 shadow" style="width: 100px; height: 100px; object-fit: cover;">
             </div>
-            <p style="color: #333; font-size: 1rem; font-weight: bold;">Project 10 - YouTube</p>
+            <p style="color: #333; font-size: 1rem; font-weight: bold;">Project 10 - coming soon</p>
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
