--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <p style="margin: 0; font-size: 0.9rem;">&copy; 2024 BizName. All rights reserved.</p>
+        <p style="margin: 0; font-size: 0.9rem;">&copy; 2025 jahidads Web Devloper</p>
         <p style="margin: 10px 0; font-size: 0.9rem;">Follow us on:
           <a href="https://www.facebook.com/jahidads1" target="_blank" class="me-2 social-icon">
             <img src="https://cdn-icons-png.flaticon.com/512/145/145802.png" alt="Facebook" style="width: 20px; height: 20px; transition: transform 0.3s;">
