--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="portfolio-img-wrapper">
               <img src="https://scontent.fdac174-1.fna.fbcdn.net/v/t39.30808-6/498386944_122095306550890978_8439212493866377379_n.webp?stp=dst-jpg_tt6&_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_ohc=DmKx7lW-yhIQ7kNvwHWaEh4&_nc_oc=AdnsCNWceFKHE3wQySDOQyC4MfCbVQZct3zSMbT92Axbmvppd_bUsWv5QlzD-J9mAqo&_nc_zt=23&_nc_ht=scontent.fdac174-1.fna&_nc_gid=C-12igTlHYC-nByOyNiXxA&oh=00_AfLGkS-Qb9Cht7zsZIzntpSRsNowRqtnpdyZPI1Difynkg&oe=6838F2C5" alt="Project 3" class="img-fluid mb-3 shadow" style="width: 100px; height: 100px; object-fit: cover;">
             </div>
-            <p style="color: #333; font-size: 1rem; font-weight: bold;">Project 03 - Portfolio Website</p>
+            <p style="color: #333; font-size: 1rem; font-weight: bold;">Project 03 - Business Portfolio</p>
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
