--- a/index.html
+++ b/index.html
@@ -1838,7 +1838,7 @@
             <div class="portfolio-img-wrapper">
               <div style="background: linear-gradient(135deg, #6e4297 0%, #d3a9c7 100%); border-radius: 14px; padding: 10px; box-shadow: 0 6px 24px rgba(196, 70, 112, 0.15); transition: box-shadow 0.3s, background 0.3s;">
                 <img 
-                  src="image/download (3).jfif" 
+                  src="download (3).jfif" 
                   alt="Project 1" 
                   class="img-fluid mb-2 shadow"
                   style="
