--- a/index.html
+++ b/index.html
@@ -1999,11 +1999,11 @@
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://www.google.com/maps/place/jahidads/@25.0576574,89.0901594,17z/data=!3m1!4b1!4m6!3m5!1s0x39fc8d007d74c671:0x6e27870ee3260c1d!8m2!3d25.0576574!4d89.0901594!16s%2Fg%2F11vyr2610b?entry=ttu&g_ep=EgoyMDI1MDQyOS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
+          <a href="https://jahidads.github.io/CyberShield/">
             <div class="portfolio-img-wrapper">
               <div style="background: linear-gradient(135deg, #4eb6b9 0%, #ad9732 100%); border-radius: 14px; padding: 10px; box-shadow: 0 6px 24px rgba(236, 64, 122, 0.15); transition: box-shadow 0.3s, background 0.3s;">
                 <img 
-                  src="my-home.jpg" 
+                  src="8597533.png" 
                   alt="Project 4" 
                   class="img-fluid mb-2 shadow"
                   style="
@@ -2049,7 +2049,7 @@
               transition: background 0.4s, color 0.4s;
               animation: colorMove3 2s linear infinite;
             ">
-              Project 04 - Business Address
+              Project 04 -Cybershield
             </p>
           </a>
         </div>
@@ -2384,11 +2384,11 @@
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://en.wikipedia.org/wiki/Wikipedia:About" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
+          <a href="https://jahidads.github.io/TeamPro/" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
             <div class="portfolio-img-wrapper">
               <div style="background: linear-gradient(135deg, #ffe06633 0%, #1b85ff22 100%); border-radius: 14px; padding: 8px; box-shadow: 0 4px 16px rgba(26, 48, 70, 0.10); transition: box-shadow 0.3s, background 0.3s;">
                 <img 
-                  src="https://cdn.storifyme.xyz/accounts/cashify-in-0561312/assets/f-bd4716300a6c80b04a47a48e598548c9-48831674122268443.jpeg?t=1674125418000" 
+                  src="OSAAS.png" 
                   alt="Project 11" 
                   class="img-fluid mb-2 shadow"
                   style="
@@ -2434,7 +2434,7 @@
               transition: background 0.4s, color 0.4s;
               animation: colorMove3 2s linear infinite;
             ">
-              Project 11 -view Wikipedia
+              Project 11 -Teampro
             </p>
           </a>
         </div>
