--- a/index.html
+++ b/index.html
@@ -1999,9 +1999,9 @@
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://jahidads.github.io/CyberShield/">
-            <div class="portfolio-img-wrapper">
-              <div style="background: linear-gradient(135deg, #4eb6b9 0%, #ad9732 100%); border-radius: 14px; padding: 10px; box-shadow: 0 6px 24px rgba(236, 64, 122, 0.15); transition: box-shadow 0.3s, background 0.3s;">
+          <a href="https://jahidads.github.io/CyberShield/" class="portfolio-item d-block text-center text-decoration-none">
+            <div class="portfolio-img-wrapper" style="display: flex; justify-content: center; align-items: center;">
+              <div style="background: linear-gradient(135deg, #4eb6b9 0%, #ad9732 100%); border-radius: 14px; padding: 10px; box-shadow: 0 6px 24px rgba(236, 64, 122, 0.15); transition: box-shadow 0.3s, background 0.3s; display: flex; justify-content: center; align-items: center;">
                 <img 
                   src="8597533.png" 
                   alt="Project 4" 
@@ -2017,6 +2017,8 @@
                     filter: grayscale(10%) brightness(0.98);
                     background: linear-gradient(135deg, #4524649a 0%, #549ecf8c 100%);
                     padding: 6px;
+                    display: block;
+                    margin: 0 auto;
                   "
                   onmouseover="
                     this.style.transform='scale(1.13) rotate(-2deg)';
@@ -2048,8 +2050,9 @@
               padding: 4px 0;
               transition: background 0.4s, color 0.4s;
               animation: colorMove3 2s linear infinite;
+              text-decoration: none;
             ">
-              Project 04 -Cybershield
+              Project 04 - Cybershield
             </p>
           </a>
         </div>
