--- a/index.html
+++ b/index.html
@@ -1834,7 +1834,7 @@
     <div class="portfolio-scroll-wrapper" style="z-index:1;">
       <div class="row g-4">
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://jahidads.github.io/Developer-portfolio/#" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
+          <a href="https://jahidads.github.io/Developer-portfolio/" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
             <div class="portfolio-img-wrapper">
               <div style="background: linear-gradient(135deg, #6e4297 0%, #d3a9c7 100%); border-radius: 14px; padding: 10px; box-shadow: 0 6px 24px rgba(196, 70, 112, 0.15); transition: box-shadow 0.3s, background 0.3s;">
                 <img 
@@ -1999,7 +1999,7 @@
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://jahidads.github.io/CyberShield/" class="portfolio-item d-block text-center text-decoration-none">
+          <a href="https://jahidads.github.io/CyberShield/" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
             <div class="portfolio-img-wrapper" style="display: flex; justify-content: center; align-items: center;">
               <div style="background: linear-gradient(135deg, #4eb6b9 0%, #ad9732 100%); border-radius: 14px; padding: 10px; box-shadow: 0 6px 24px rgba(236, 64, 122, 0.15); transition: box-shadow 0.3s, background 0.3s; display: flex; justify-content: center; align-items: center;">
                 <img 
@@ -2057,7 +2057,7 @@
           </a>
         </div>
         <div class="col-6 col-md-4 col-lg-3">
-          <a href="https://jahidads.github.io/Cyber-Security/#" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
+          <a href="https://jahidads.github.io/Cyber-Security/" target="_blank" class="portfolio-item d-block text-center text-decoration-none">
             <div class="portfolio-img-wrapper">
               <div style="background: linear-gradient(135deg, #3d8491 0%, #a14186 100%); border-radius: 14px; padding: 10px; box-shadow: 0 6px 24px rgba(48, 68, 136, 0.486); transition: box-shadow 0.3s, background 0.3s;">
                 <img 
